--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@ let input = document.querySelector('#name');
 let DOB = document.querySelector('#dob');
 let FatherName = document.querySelector('#faname');
 let MobileNum = document.querySelector('#mb');
-let Email = document.querySelector('#Email');
+let email= document.querySelector('#Email');
 let strength = document.querySelector('#str');
 let hobby = document.querySelector('#hobby');
 let language = document.querySelector('#lang');
 let linkedin = document.querySelector('#linkedin');
 let Git= document.querySelector('#git');
+let address= document.querySelector('#addr');
 
 
 let t = `<PersonalDetails>
@@ -78,13 +79,13 @@ let t = `<PersonalDetails>
 <DOB> ${DOB.value} </DOB>
 <Father> ${FatherName.value} </Father>
 <Mobile> ${MobileNum.value} </Mobile>
-<Email> ${Email}</Email>
-<Strength>${strength}</Strength>
-<Hobby>${hobby}</Hobby>
-<Language>${language}</Language>
-<Linkedin>${linkedin}</Linkedin>
-<GitHub> ${Git}</GitHub>
-
+<Email> ${email.value} </Email>
+<Strength>${strength.value}</Strength>
+<Hobby>${hobby.value}</Hobby>
+<Language>${language.value}</Language>
+<Linkedin>${linkedin.value}</Linkedin>
+<GitHub> ${Git.value}</GitHub>
+<Address>${address.value}</Address>
 
 </PersonalDetails>`
 
