--- a/index.html
+++ b/index.html
@@ -73,6 +73,48 @@ let linkedin = document.querySelector('#linkedin');
 let Git= document.querySelector('#git');
 let address= document.querySelector('#addr');
 
+let branch= document.querySelector('#gradu');
+let institute= document.querySelector('#graduI');
+let Gyear= document.querySelector('#graguY');
+let Gcpi= document.querySelector('#graduC');
+
+
+let class12Institute = document.querySelector('#C12I');
+<class12Institute></class12>
+let class12Year = document.querySelector('#C12Y');
+let class12CGPA = document.querySelector('#C12C');
+
+
+
+
+let class10Institute = document.querySelector('#C10I');
+let class10Year = document.querySelector('#C10Y');
+let class10CGPA = document.querySelector('#C10C');
+
+
+
+
+
+
+
+
+let Programming = document.querySelector("#prgmL");
+
+let database = document.querySelector('#DataBL');
+
+
+
+
+let OtherL =   document.querySelector('#OthL');
+
+
+let OS =   document.querySelector('#OS');
+
+
+
+let Project =   document.querySelector('#project');
+let Achievement =   document.querySelector('#achievem');
+let Certificate =   document.querySelector('#certificate');
 
 let t = `<PersonalDetails>
 <name> ${input.value} </name>
@@ -85,7 +127,14 @@ let t = `<PersonalDetails>
 <Language>${language.value}</Language>
 <Linkedin>${linkedin.value}</Linkedin>
 <GitHub> ${Git.value}</GitHub>
-<Address>${address.value}</Address>
+<address>${address.value}</address>
+<branch>${branch.value}</branch>
+
+<institute>${institute.value}</institute>
+<graduationYear>${Gyear.value}</graduationYear>
+<graduationCpi>${Gcpi.value}</graduationCpi>
+
+
 
 </PersonalDetails>`
 
